# identity-shaping-framework-template

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  isf.yaml  pyproject.toml
.beads/: issues.jsonl
.githooks/: pre-commit
docs/: README.md  backend-functionality.md  backend-selection.md  decisions.md  setup.md  workflow.md
docs/phases/: 02-evaluation.md  03-data-synthesis.md  04-training.md
identity/: IDENTITY.md  SEED.md
identity/templates/: full.txt.j2
training/configs/: default.yaml
