[project]
name = "my-identity-project"
version = "0.1.0"
description = "Identity shaping project"
requires-python = ">=3.13"
dependencies = [
    "identity-shaping-framework",
]

# Note: uv sources don't propagate from dependencies, so we must redeclare
# git sources for ISF's git dependencies here
[tool.uv.sources]
identity-shaping-framework = { git = "https://github.com/xlr8harder/identity-shaping-framework" }
llm-client = { git = "https://github.com/xlr8harder/llm_client" }
mq = { git = "https://github.com/xlr8harder/mq" }
tinker-cookbook = { git = "https://github.com/xlr8harder/tinker-cookbook" }
dispatcher = { git = "https://github.com/LumiOpen/dispatcher" }

[tool.hatch.build]
packages = []
